src/test/run-pass/bare-static-string.rs
fn main() {
    let x: &static/str = "foo";
    io::println(x);
}

