src/test/compile-fail/binop-bitxor-str.rs
// error-pattern:^ cannot be applied to type `str`

fn main() { let x = "a" ^ "b"; }